Fix code blocks in chat were overflowing

--- a/web-ui/src/input.css
+++ b/web-ui/src/input.css
@@ -34,6 +34,9 @@
   > ul code {
     @apply text-sm font-bold text-gray-700 bg-gray-200;
   }
+  > pre {
+    @apply overflow-x-auto text-xs;
+  }
   > ul li {
     @apply list-disc list-outside ml-4 pl-1 mt-2;
   }
